blueservice.yml
---
kind: Service
apiVersion: v1
metadata:
  name: bluegreenlb
  labels:
    app: bluegreenlb
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: blue
  type: LoadBalancer
